# PyPropulsion

./: .gitignore  PyPropulsion_2_Month_Reduced_Scope_Roadmap.txt  README.md  Structure.txt  Task.txt  TimeLine.txt  pyproject.toml  requirements.txt
docs/project_management/: assumptions_register.md  decision_log.md  roadmap.md
examples/: phase1_basic_engine.py
examples/mission/: two_stage_sso_mission.py
src/pypropulsion/: constants.py
src/pypropulsion/mission/: __init__.py  delta_v.py  mission_analysis.py  mission_requirements.py  orbit.py  staging.py
src/pypropulsion/phase1/: performance.py
tests/: test_delta_v.py  test_mission_analysis.py  test_mission_requirements.py  test_orbit.py  test_phase1_performance.py  test_staging.py
